--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -856,7 +856,7 @@ about:
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
-  avatar: /img/avatar.png
+  avatar: /img/avatar.jpg
   name: "a3d21"
   intro: "编程手艺人"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
