--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -570,6 +570,10 @@ post:
   # Table of contents (TOC)
   toc:
     enable: true
+    # 置于板块的左侧或右侧
+    # place in the board
+    # Options: left | right
+    placement: left
     # 目录会选择这些节点作为标题
     # TOC will select these nodes as headings
     headingSelector: "h1,h2,h3,h4,h5,h6"
